solution overlap fixed

--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -2,6 +2,7 @@
   grid-column: 1 / -1;
   width: 100%;
   padding-bottom: 43px;
+  overflow: hidden;
 
   @include onDesktop {
     box-sizing: content-box;
@@ -26,10 +27,11 @@
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit:cover;
       object-position: top;
       pointer-events: none;
       user-select: none;
+      margin-bottom: auto;
     }
 
     @include onTablet {
@@ -49,16 +51,13 @@
 
       &:nth-child(3) {
         grid-column: 1 / span 8;
-        padding-bottom: 360px;
       }
 
       &:last-child {
         grid-column: 9 / -1;
-        padding-bottom: 360px;
       }
 
       width: unset !important;
-      margin: 0 !important;
 
       @include hover(transform, scale(1.05) translateZ(0));
       cursor: pointer;
